# ffindex_py

./: README.md  pyproject.toml
src/ffindex_py/: main.py
