[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffindex-py"
version = "0.1.0"
authors = [
  { name="Andrey Rozenberg", email="alephreish@gmail.com" },
]
description = "ffindex re-implementation in python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [ ]

[project.urls]
"Homepage" = "https://github.com/alephreish/ffindex-py"
"Bug Tracker" = "https://github.com/alephreish/ffindex-py/issues"

[project.scripts]
ffindex_apply_py = "ffindex_py.main:run_apply"
ffindex_reindex_py = "ffindex_py.main:run_reindex"
ffindex_from_fasta_py = "ffindex_py.main:run_from_fasta"
ffindex_rename_py = "ffindex_py.main:run_rename"
ffindex_get_py = "ffindex_py.main:run_get"
ffindex_merge_py = "ffindex_py.main:run_merge"
